--- a/css/index.css
+++ b/css/index.css
@@ -15,3 +15,4 @@
 @import url(./pages/registro.css);
 @import url(./pages/faq.css);
 @import url(./pages/about.css);
+@import url(./pages/checkout.css);
